--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Module federation proof of concept",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "turbo dev"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,9 @@
   "devDependencies": {
     "turbo": "^2.4.4"
   },
-  "packageManager": "npm@10.9.0"
+  "packageManager": "npm@10.9.0",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
